--- a/content/post/白濱旅遊.md
+++ b/content/post/白濱旅遊.md
@@ -4,19 +4,22 @@ date = 2024-05-02
 draft = false
 +++
 
-**Shilahama 白濱旅遊攻略**
+**Shilahama travel tips 白濱旅遊攻略**
 
 
 **Transportation**
 
-- Take JR(recommend 黑潮號)
+- Take the JR(recommend 黑潮號)
+
 - 關西JR周遊券
 
-To get Shirahama, I highly recommend you the **關西5/7日周遊券**, which can help you to take the 黑潮號 (the FAST JR can get to Shirahama), and as it shows in the name, 關西周遊券 conclude all your trip-fees as long as you take the JR railway in KANSAI part (including 大阪，京都，奈良，神戶 etc.）. You can get it on TAOBAO(淘寶) or buy it at the KANSAI airport and exchange it at the KANSAI airport (see details at TAOBAO).
+To get Shirahama, I highly recommend you use the **關西5/7日周遊券**, which can help you to take the 黑潮號. 關西周遊券 conclude all your trip-fees as long as you take the JR railway in KANSAI part of Japan (including 大阪，京都，奈良，神戶 etc.). You can get it on TAOBAO(淘寶) or buy it at the KANSAI airport and exchange it at the KANSAI airport as well (see details at TAOBAO).
 
-- In Shirahama, you can use cash to take the Meko bus or buy the one-day pass bus ticket (not really nessary)
+- During the time in Shirahama, you can use cash to take the Meko bus or buy the one-day pass ticket (not really nessary unless you will take more than 4 times a day).
 
-**Attention**: 黑潮號 only provide signed seats. Please make sure you have selected your seats on the ticket machine.
+**Attention**: 黑潮號 only provide signed seats. Please make sure you have selected your seats on the ticket machine.(Ask the staff at the airport for details)
+
+**Another Attention**: 關西3日周遊券 doesn't incloud the fee for 黑潮號. Please make sure that you would buy the 5-days pass or 7 days pass.
 
 **Hotels**
 
@@ -41,17 +44,16 @@ Find all these hotel on Agoda/Trip.com etc, the price varies among seasons.
 
 - Visit どれどれ市場, it is the biggest food market in the town where you can see fishermen dissect fishes.
 
-- Family Mart!!!
+- Family Mart!!! (Strongly recommend try the 明治 milk with white pakage)
 
-- DAISO supermarket
+- DAISO supermarket(You can buy fruits here. Not having enough fruits in Japan almost drive me crazy.)
 
   
-**Some Pictures** if you interested
+**Some Pictures** (if you interested)
 
 [白良濱](https://img2.imgtp.com/2024/05/02/rzCVvhzw.JPG)
 
 [Room view of Key Terrance](https://img2.imgtp.com/2024/05/02/5ujHQaBk.jpg)
-
 
 [Room view of 海之舟](https://img2.imgtp.com/2024/05/02/u85oOuw9.JPG)
 
