--- a/content/post/白濱旅遊.md
+++ b/content/post/白濱旅遊.md
@@ -6,10 +6,19 @@ draft = false
 
 **Shilahama travel tips 白濱旅遊攻略**
 
+**Introduction**
+
+Shirahama is a small town by the Pacific Ocean at the KANSAI part of Japan. I have been there 2 times and I would like to share some tips if you want your vacation:
+
+- 2-3 days just for hanging out
+- no matter alone or with friends
+- take a hot-spring in a peaceful environment while watching the sea tides hit the rocks.
+	
+
 
 **Transportation**
 
-- Take the JR(recommend 黑潮號)
+- Take the JR(recommend 黑潮號：may take 3 hours from the airport)
 
 - 關西JR周遊券
 
@@ -49,6 +58,7 @@ Find all these hotel on Agoda/Trip.com etc, the price varies among seasons.
 - DAISO supermarket(You can buy fruits here. Not having enough fruits in Japan almost drive me crazy.)
 
   
+
 **Some Pictures** (if you interested)
 
 [白良濱](https://img2.imgtp.com/2024/05/02/rzCVvhzw.JPG)
@@ -59,4 +69,14 @@ Find all these hotel on Agoda/Trip.com etc, the price varies among seasons.
 
 [Outside view of 海之舟](https://img2.imgtp.com/2024/05/02/wswaFiTv.JPG)
 
+**Recomended trip schedule**:
+
+| Day  |      |                    Activity                    |
+| ---- | ---- | :--------------------------------------------: |
+| 1    |      |                - Get Shirahama                 |
+|      |      |               - Visit the beach                |
+|      |      | - take a the oldest hot-spring neaby the beach |
+| 2    |      | - Play billiards or table tennis at the hotel  |
+|      |      |          - Go to the Toretore market           |
+|      |      |         - visit 千疊敷/Zoo/wanderland           |
 
